# Adiabatic-Linear-Solver-QPanda

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  DOC.md  Makefile  README.md  RESULTS.md  block_encoding.cpp  block_encoding.h  qda_linear_solver.cpp  qda_linear_solver.h  run.sh
doc/: BlockEncoding.md  LinearSolver.md
playground/: block_encoding.py  main.py  qda_linear_solver.py  test_QDA.py  test_SingleAmpQVM.py  test_approx.py  test_matrix_decompose.cpp  test_multi_control.py  utils.py  vis_adiabatic_evolution.py  vis_adiabatic_evolution_ls.py  vis_eigen_filter_ls.py  vis_qda_walk.py  vis_qda_walk_ls.py  vis_time_evolution.py
src/: block_encoding.cpp  block_encoding.h  block_encoding.py  block_encoding_test.cpp  main.cpp  qda_linear_solver.cpp  qda_linear_solver.h  qda_linear_solver_test.cpp  test_matrix_decompose.cpp  utils.cpp  utils.h
